2002-10-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: __INSURE__, not insight...

	* include/libbk_net.h: add #defines needed by feature extract plugins

	* include/libbk_include.h: turn off BSD extensions for Insure

	* lib/b_url.c: everybody has strcasecmp, not all declare it

	* lib/b_error.c (bk_error_iprint): J.Brian thinks that omitting -O2
	makes it easier to debug, but he just loses helpful compiler errors
	
2002-10-16  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_error.c (bk_error_iprint): Added rudimentary error
	aggregation.

	* lib/b_general.c (bk_general_syslog): Change format from char* to
	const char*.  Fix missed initialization.

2002-10-16  Seth Robertson  <seth@yeah.baka.org>

	* include/libbk_oscompat.h: Define in_addr_t if needed.

2002-10-14  James Tanis  <jtt@hawking.sysdetect.com>

	* include/libbk_net.h (BAKA_TCPHDR_LENIENT_FLAGMASK): Define this
	more strictly

2002-10-09  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_addrgroup.c (tcp_connect_activity): Also check errno
	against autoconf'ed determined value for subsequent calls to
	connect(2) after the first one (for a given socket) has been
	refused.

2002-10-04  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_run.c (bk_run_once): Do not block in select(2) if an event
	has fired (ie allow timeouts to works their magic).
	(bk_run_checkeventq): Optional copyout to return the number of
	events which have fired in this check.

2002-10-02  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_udp_listen): Always set
	SO_REUSEADDR when setting to listen on udp.

2002-09-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_MAX_SHORT): useless, use USHRT_MAX et al.

	* lib/b_error.c (be_error_append): fix James' bugs while he sleeps

2002-09-27  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_error.c (be_error_append): Don't append NEWLINE if last
	char is already a NEWLINE.
